--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@ layout: default
     {% endfor %}
   </ul>
 
-  <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | prepend: site.baseurl }}">als RSS</a></p>
+  <p class="rss-subscribe">als <a href="{{ "/feed.xml" | prepend: site.baseurl }}">RSS</a> abonieren</p>
 
 </div>
